changed images to webp

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shuffled | The Puzzle Arcade</title>
+    <link rel="icon" type="image/png" href="images/logo.webp">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -14,6 +15,7 @@
     <div class="arcade-cabinet">
         
         <header>
+            <img src="images/logo.webp" alt="Shuffled Logo" class="logo-img">
             <h1 class="glitch-title" data-text="SHUFFLED">SHUFFLED</h1>
             <p class="subtitle">Pixel Perfect Puzzle Arcade</p>
         </header>
