added how to play tutorial overlay

--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
             <div class="game-interface">
                 <div class="board-container">
                     <div id="puzzle-board" class="grid-4x4"></div>
+                    <div id="demo-overlay" class="demo-overlay">
+                        <div class="demo-content">
+                            <h2>HOW TO PLAY</h2>
+                            <div class="instruction-diagram">
+                                <div class="diagram-box movable-piece">
+                                    <i class="fas fa-hand-point-right hand-icon"></i>
+                                    <span>TILE</span>
+                                </div>
+                                <div class="arrow-connector">
+                                    <i class="fas fa-arrow-right bounce-arrow"></i>
+                                </div>
+                                <div class="diagram-box empty-target">
+                                    <span>EMPTY SPACE</span>
+                                </div>
+                            </div>
+                            <p class="demo-text">Tap/Slide tiles adjacent to the empty space to move them.</p>
+                            <p class="demo-subtext pulse-text">TAP ANYWHERE TO START</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="sidebar">
                     <div class="panel-box">
